--- a/Chaos.html
+++ b/Chaos.html
@@ -33,11 +33,11 @@
 
 <table>
 <tr>
-	<td> <div class="button"> <A href="file:///Users/Megan/Desktop/MIS/Site.HTML">Me! </A> </div> </td>
-	<td> <div class="button"> <A href="file:///Users/Megan/Desktop/MIS/Chaos.html"> My Puppy!    </A></div> </td>
-	<td> <div class="button"> <A href="file:///Users/Megan/Desktop/MIS/music.html"> My Favorite Music! </A> </div> </td>	
-	<td> <div class="button"> <A href="file:///Users/Megan/Desktop/MIS/Shows.html"> My Favorite Shows! </A> </div> </td>
-	<td> <div class="button"> <A href="file:///Users/Megan/Desktop/MIS/Family.html"> My Family! </A> </div> </td>
+	<td> <div class="button"> <A href="Site.HTML">Me! </A> </div> </td>
+	<td> <div class="button"> <A href="Chaos.html"> My Puppy!    </A></div> </td>
+	<td> <div class="button"> <A href="music.html"> My Favorite Music! </A> </div> </td>	
+	<td> <div class="button"> <A href="Shows.html"> My Favorite Shows! </A> </div> </td>
+	<td> <div class="button"> <A href="Family.html"> My Family! </A> </div> </td>
 </tr>
 </table>
 </center>
