--- a/Shows.html
+++ b/Shows.html
@@ -71,11 +71,11 @@ Movies!
 <center>
 <table>
 <tr>
-	<td> <div class="button"> <A href="file:///Users/Megan/Desktop/MIS/Site.HTML">Me! </A> </div> </td>
-	<td> <div class="button"> <A href="file:///Users/Megan/Desktop/MIS/Chaos.html"> My Puppy!    </A></div>  </td>
-	<td>  <div class="button"><A href="file:///Users/Megan/Desktop/MIS/music.html"> My Favorite Music! </A> </div> </td>	
-	<td>  <div class="button"><A href="file:///Users/Megan/Desktop/MIS/page%202.html"> My Favorite Shows! </A></div>  </td>
-	<td>  <div class="button"><A href="file:///Users/Megan/Desktop/MIS/Family.html"> My Family! </A></div>  </td>
+	<td> <div class="button"> <A href="Me312017.github.io/Site.HTML">Me! </A> </div> </td>
+	<td> <div class="button"> <A href="Me312017.github.io/Chaos.html"> My Puppy!    </A></div> </td>
+	<td> <div class="button"> <A href="https://me312017.github.io/music.html"> My Favorite Music! </A> </div> </td>	
+	<td> <div class="button"> <A href="Me312017.github.io/Shows.html"> My Favorite Shows! </A> </div> </td>
+	<td> <div class="button"> <A href="Me312017.github.io/Family.html"> My Family! </A> </div> </td>
 </tr>
 </table>
 </center>
