--- a/Family.html
+++ b/Family.html
@@ -38,7 +38,7 @@ I would do anything for my friends, they are what made me, me. I can't imagine w
 <table>
 <tr>
 	<td> <div class="button"> <A href="Me312017.github.io/Site.HTML">Me! </A> </div> </td>
-	<td> <div class="button"> <A href="/Chaos.html"> My Puppy!    </A></div> </td>
+	<td> <div class="button"> <A href="Me312017.github.io/Chaos.html"> My Puppy!    </A></div> </td>
 	<td> <div class="button"> <A href="Me312017.github.io/music.html"> My Favorite Music! </A> </div> </td>	
 	<td> <div class="button"> <A href="Me312017.github.io/Shows.html"> My Favorite Shows! </A> </div> </td>
 	<td> <div class="button"> <A href="Me312017.github.io/Family.html"> My Family! </A> </div> </td>
