--- a/Chaos.html
+++ b/Chaos.html
@@ -33,7 +33,7 @@
 
 <table>
 <tr>
-	<td> <div class="button"> <A href="Me312017.github.io/Site.HTML">Me! </A> </div> </td>
+	<td> <div class="button"> <A href="Me312017.github.io/Site.HTML"> Home! </A> </div> </td>
 	<td> <div class="button"> <A href="Me312017.github.io/Chaos.html"> My Puppy!    </A></div> </td>
 	<td> <div class="button"> <A href="Me312017.github.io/music.html"> My Favorite Music! </A> </div> </td>	
 	<td> <div class="button"> <A href="Me312017.github.io/Shows.html"> My Favorite Shows! </A> </div> </td>
