--- a/music.html
+++ b/music.html
@@ -22,7 +22,7 @@
 	<td> <center> R5 </Center> <IMG SRC="r5.jpg"></td>  <td><center> Ross Lynch </center> <center> <IMG SRC="ross.jpg"> </center></td> <td> <center> "Smile" </center> <iframe width="560" height="315" src="https://www.youtube.com/embed/4tV6bzk3_6c" frameborder="0" allowfullscreen></iframe></td>
 </tr>
 <tr>
-	<td>  <center> Sam Hunt </center> <center> <IMG SRC="samLogo.jpg"> </center></td> <td> <center> Sam Hunt </center><center><IMG SRC="sam.jpg"> </center></td> <td> <center> "Body Like a Back Road" </center><iframe width="560" height="315" src="https://www.youtube.com/embed/Fx-EfjsRcBk" frameborder="0" allowfullscreen></iframe></td>
+	<td>  <center> Sam Hunt </center> <center> <IMG SRC="SamLogo.jpg"> </center></td> <td> <center> Sam Hunt </center><center><IMG SRC="Sam.jpg"> </center></td> <td> <center> "Body Like a Back Road" </center><iframe width="560" height="315" src="https://www.youtube.com/embed/Fx-EfjsRcBk" frameborder="0" allowfullscreen></iframe></td>
 </tr>
 
 </table>
