--- a/Family.html
+++ b/Family.html
@@ -28,7 +28,7 @@
  
 <h1> <center> My Friends </center> </h1>
 <div class="friends">
-<center> <IMG SRC="P.JPG"> <IMG SRC="Ads.jpg"> <IMG SRC="J.JPG"> <IMG SRC="Nana.jpg"> <IMG SRC="Amy2.JPG"> <IMG SRC="mike.JPG"> </center>
+<center> <IMG SRC="P.JPG"> <IMG SRC="Ads.JPG"> <IMG SRC="J.JPG"> <IMG SRC="Nana.jpg"> <IMG SRC="amy2.JPG"> <IMG SRC="mike.JPG"> </center>
 
 I would do anything for my friends, they are what made me, me. I can't imagine what my life would be like if even only one of them were not in it.
 </div>  
