--- a/music.html
+++ b/music.html
@@ -37,11 +37,11 @@
 <center>
 <table>
 <tr>
-	<td> <div class="button"> <A href="Me312017.github.io/Site.HTML">Me! </A> </div> </td>
-	<td> <div class="button"> <A href="Me312017.github.io/Chaos.html"> My Puppy!    </A></div> </td>
-	<td> <div class="button"> <A href="https://me312017.github.io/music.html"> My Favorite Music! </A> </div> </td>	
-	<td> <div class="button"> <A href="Me312017.github.io/Shows.html"> My Favorite Shows! </A> </div> </td>
-	<td> <div class="button"> <A href="Me312017.github.io/Family.html"> My Family! </A> </div> </td>
+	<td> <div class="button"> <A href="/Site.HTML">Me! </A> </div> </td>
+	<td> <div class="button"> <A href="/Chaos.html"> My Puppy!    </A></div> </td>
+	<td> <div class="button"> <A href="/music.html"> My Favorite Music! </A> </div> </td>	
+	<td> <div class="button"> <A href="/Shows.html"> My Favorite Shows! </A> </div> </td>
+	<td> <div class="button"> <A href="/Family.html"> My Family! </A> </div> </td>
 </tr>
 </table>
 </center>
