--- a/Family.html
+++ b/Family.html
@@ -37,11 +37,11 @@ I would do anything for my friends, they are what made me, me. I can't imagine w
 
 <table>
 <tr>
-	<td> <div class="button"> <A href="Me312017.github.io/Site.HTML"> Home! </A> </div> </td>
-	<td> <div class="button"> <A href="Me312017.github.io/Chaos.html"> My Puppy!    </A></div> </td>
-	<td> <div class="button"> <A href="Me312017.github.io/music.html"> My Favorite Music! </A> </div> </td>	
-	<td> <div class="button"> <A href="Me312017.github.io/Shows.html"> My Favorite Shows! </A> </div> </td>
-	<td> <div class="button"> <A href="Me312017.github.io/Family.html"> My Family! </A> </div> </td>
+	<td> <div class="button"> <A href="/Site.HTML"> Home! </A> </div> </td>
+	<td> <div class="button"> <A href="/Chaos.html"> My Puppy!    </A></div> </td>
+	<td> <div class="button"> <A href="/music.html"> My Favorite Music! </A> </div> </td>	
+	<td> <div class="button"> <A href="/Shows.html"> My Favorite Shows! </A> </div> </td>
+	<td> <div class="button"> <A href="/Family.html"> My Family! </A> </div> </td>
 </tr>
 </table>
 </center> 
