--- a/Family.html
+++ b/Family.html
@@ -29,8 +29,7 @@
 <h1> <center> My Friends </center> </h1>
 <div class="friends">
 <center> <IMG SRC="P.JPG"> <IMG SRC="J.JPG"> <IMG SRC="Ads.JPG"> <IMG SRC="nana.jpg"> <IMG SRC="amy2.JPG"> </center>
-
-I would do anything for my friends, they are what made me, me. I can't imagine what my life would be like if even only one of them were not in it. They formed my taste in music, my taste in movies... everything about who I am is shared with them. 
+<center> I would do anything for my friends, they are what made me, me. I can't imagine what my life would be like if even only one of them were not in it. They formed my taste in music, my taste in movies... everything about who I am is shared with them. </center> 
 </div>  
  <center>
 
