--- a/Chaos.html
+++ b/Chaos.html
@@ -26,7 +26,7 @@
 	 </center> 
 	</h3>
 	<div class="dog2">
-	<center> <IMG SRC="IMG_6856.JPG"> <IMG SRC="dog.jpeg"> <IMG SRC="dog2.JPG"> <IMG SRC="puppy.JPG"> </center>
+	<center> <IMG SRC="IMG_6856.JPG"> <IMG SRC="dog.jpeg"> <IMG SRC="dog2.JPG"> <IMG SRC="Puppy.JPG"> </center>
 	<div>
 <center>
 
