--- a/Family.html
+++ b/Family.html
@@ -11,7 +11,7 @@
 <center> Anyone who knows me knows I put my friends and family before anything else. If I had to choose right now what was most important to me, it would be those who love me unconditionally.   </center>
 
   <center> 
-  <IMG SRC="Mum.JPG">  <IMG SRC="memere.jpg">  <IMG SRC="dad.JPG">
+  <IMG SRC="Mum.JPG">  <IMG SRC="memere.jpg">  <IMG SRC="dad.jpg">
 <p> 
 <video width="320" height="240" controls>
       <source src="thanksgiving.MOV" type="video/mp4">
